Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,8 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "  lowest_index = []"
+    "    for first in travel_destinations:\n",
+    "        return(travel_destinations[0])"
    ]
   },
   {
