Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    n_u = [travel_destination]"
+    "    n_u = [travel_destinations(0)]"
    ]
   },
   {
