--- a/index.ipynb
+++ b/index.ipynb
@@ -170,10 +170,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination():\n",
-    "    for favorite in travel_destinations:\n",
-    "        (travel_destinations.append('madagascar'))\n",
-    "        return(travel_destinations[-1])"
+    "def favorite_destination():\n"
    ]
   },
   {
