--- a/index.ipynb
+++ b/index.ipynb
@@ -171,7 +171,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    return fav_des = [t.]"
+    "    return fav_des = [d.append(madagascar)]"
    ]
   },
   {
