--- a/index.ipynb
+++ b/index.ipynb
@@ -220,6 +220,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
+    "    fav_des = [a.app]\n",
     "    \n",
     "        \n",
     "travel_destinations [-1] # 'madagascar'\n"
