--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    fav_des = []\n",
-    "    travel_\n",
+    "    travel_destinations.append(madagascar)\n",
     "    \n",
     "        \n",
     "travel_destinations [-1] # 'madagascar'\n"
