--- a/index.ipynb
+++ b/index.ipynb
@@ -221,6 +221,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "     travel_destinations.append(madagascar)\n",
+    "        ret\n",
     "   \n",
     "    \n",
     "    \n",
