--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "     travel_destinations.append(madagascar)\n",
-    "        ret\n",
+    "        return travel_destinations9\n",
     "   \n",
     "    \n",
     "    \n",
