--- a/index.ipynb
+++ b/index.ipynb
@@ -203,28 +203,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'madagascar'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-20-7e01465d9758>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-7e01465d9758>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return travel_destinations(-1)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "     travel_destinations.append(madagascar)\n",
-    "        return travel_destinations9\n",
-    "   \n",
-    "    \n",
-    "    \n",
+    "        return travel_destinations(-1)\n",
     "        \n",
     "travel_destinations [-1] # 'madagascar'\n"
    ]
