--- a/index.ipynb
+++ b/index.ipynb
@@ -203,15 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-20-7e01465d9758>, line 4)",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-7e01465d9758>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return travel_destinations(-1)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return travel_destinations(-1)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "     travel_destinations.append(madagascar)\n",
-    "        return travel_destinations(-1)\n",
+    "    return travel_destinations(-1)\n",
     "        \n",
     "travel_destinations [-1] # 'madagascar'\n"
    ]
