--- a/index.ipynb
+++ b/index.ipynb
@@ -218,6 +218,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
+    "    des\n",
     "     travel_destinations.append(madagascar)\n",
     "    return travel_destinations(-1)\n",
     "        \n",
