--- a/index.ipynb
+++ b/index.ipynb
@@ -218,9 +218,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    des\n",
+    "    des = []\n",
     "     travel_destinations.append(madagascar)\n",
-    "    return travel_destinations(-1)\n",
     "        \n",
     "travel_destinations [-1] # 'madagascar'\n"
    ]
