--- a/index.ipynb
+++ b/index.ipynb
@@ -220,6 +220,7 @@
     "def favorite_destination():\n",
     "    des = []\n",
     "     travel_destinations.append(madagascar)\n",
+    "    return des\n",
     "        \n",
     "travel_destinations [-1] # 'madagascar'\n"
    ]
