--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "'croatia'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,8 +220,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    des = []\n",
-    "    travel_destinations.append(madagascar)\n",
+    "    des = [travel_destinations.append(madagascar)]\n",
     "    return des(-1)\n",
     "        \n",
     "travel_destinations [-1] # 'madagascar'\n"
