Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'croatia'"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,9 +221,9 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    des = [travel_destinations.append('madagascar')]\n",
-    "    return des(-1)\n",
+    "    return des()\n",
     "        \n",
-    "travel_destinations [-1] # 'madagascar'\n"
+    "travel_destinations # 'madagascar'\n"
    ]
   },
   {
