--- a/index.ipynb
+++ b/index.ipynb
@@ -220,8 +220,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    des = [travel_destinations.append('madagascar')]\n",
-    "    return(des)\n",
+    "    return des = [travel_destinations.append('madagascar')]\n",
     "\n",
     "travel_destinations # 'madagascar'\n"
    ]
