Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,24 +203,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-35-007b0c28d8d9>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-007b0c28d8d9>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return des = [travel_destinations.append('madagascar')]\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    return des = [travel_destinations.append('madagascar')]\n",
+    "    des = [travel_destinations.append('madagascar')]\n",
+    "    \n",
     "\n",
     "travel_destinations # 'madagascar'\n"
    ]
