--- a/index.ipynb
+++ b/index.ipynb
@@ -219,8 +219,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    des = [travel_destinations.append('madagascar')]\n",
-    "    \n",
-    "\n",
+    "    return(des)\n",
+    "favorit\n",
     "travel_destinations # 'madagascar'\n"
    ]
   },
