--- a/index.ipynb
+++ b/index.ipynb
@@ -203,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
     "    des = [travel_destinations.append('madagascar')]\n",
     "    return(des)\n",
     "\n",
-    "favorite_destination\n",
+    "favorite_destination()\n",
     "travel_destinations # 'madagascar'\n"
    ]
   },
