--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "    return(des)\n",
     "\n",
     "favorite_destination()\n",
-    "travel_destinations # 'madagascar'\n"
+    "travel_destination # 'madagascar'\n"
    ]
   },
   {
