--- a/index.ipynb
+++ b/index.ipynb
@@ -203,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.favorite_destination()>"
+       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,8 +222,8 @@
     "def favorite_destination():\n",
     "    des = [travel_destinations.append('madagascar')]\n",
     "    return(des)\n",
-    "\n",
-    "favorite_destination\n"
+    "favorite_destination\n",
+    "travel_destinations # 'madagascar'\n"
    ]
   },
   {
