--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,10 +221,11 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    des = [travel_destinations.append('madagascar')]\n",
-    "    return(des):\n",
-    "    return\n",
+    "    return(des)\n",
+    "    return('madagascar')\n",
     "\n",
     "favorite_destination\n",
+    "\n",
     "travel_destinations # 'madagascar'\n"
    ]
   },
