--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.append()\n",
+    "    travel_destinations.append('madagascar')\n",
+    "    return(travel_de)\n",
     "\n",
     "favorite_destination\n",
     "\n",
