Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "\n",
     "favorite_destination\n",
     "\n",
-    "travel_destinations # 'madagascar'\n"
+    "travel_destinations(-) # 'madagascar'\n"
    ]
   },
   {
