--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    \n",
+    "    return [a.title() for]\n",
     "    \n",
     "  "
    ]
