Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    ret [a.title() for a in (len(range(ravel_destinations)))]\n",
+    "    x = [a.title() for a in (len(range(ravel_destinations)))]:\n",
+    "        retu\n",
     "    \n",
     "  "
    ]
