--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    x = a.title() for a in ravel_destinations\n",
+    "    x = [a.title() for a in ravel_destinations]\n",
     "    return \n",
     "    \n",
     "  "
